--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/faceless128/u-develop-it#readme",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "mysql2": "^2.3.3"
   },
